@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - dotfiles and dot-directories are now included in sharedirs
 
 5.013     2014-02-08 17:08:16-05:00 America/New_York
         - META.json is now a UTF-8 file, rather than ASCII
